--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha server/tests/*.test.js",
-    "test-watch":"nodemon --exec npm test"
+    "test-watch": "nodemon --exec npm test"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "lodash": "^4.15.0",
     "mongodb": "^2.2.5",
-    "mongoose": "^4.5.9"
+    "mongoose": "^4.5.9",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "expect": "^1.20.2",
